# SimpleChores

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  fixed_dashboard.yaml  hacs.json  pyproject.toml  pytest.ini  requirements_test.txt
.claude/commands/: commit_push_release.md  release.md
.devcontainer/: README.md  devcontainer.json
blueprints/automation/: simplechores_calendar_to_todo.yaml  simplechores_schedule_to_todo.yaml
blueprints/scripts/: simplechores_claim_reward.yaml
custom_components/SimpleChores/: __init__.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  models.py  number.py  quality_scale.yaml  sensor.py  services.yaml  storage.py  strings.json  text.py  todo.py
custom_components/SimpleChores/dashboard/: simplechores-view.yaml
custom_components/SimpleChores/translations/: en.json
docs/: CHORE_MANAGEMENT.md
scripts/: release.sh
tests/: __init__.py  conftest.py  test_button_simplified.py  test_config_flow.py  test_coordinator.py  test_integration.py  test_models.py  test_platforms.py  test_reward_progress.py  test_sensor_comprehensive.py  test_service_error_handling.py  test_storage.py  test_todo_comprehensive.py  test_todo_persistence.py  test_working_smoke_tests.py
